apps/zLinebot/k8s/linkerd-inject.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zlinebot
  annotations:
    linkerd.io/inject: enabled
