apps/zLinebot/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zlinebot
  labels:
    istio-injection: enabled
