apps/zLinebot/k8s/grafana.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grafana
  namespace: zlinebot
spec:
  containers:
    - name: grafana
      image: grafana/grafana
      ports:
        - containerPort: 3000
