apps/zLinebot/k8s/infer-gpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpu-infer
spec:
  template:
    spec:
      nodeSelector:
        accelerator: nvidia
