apps/zLinebot/k8s/prometheus.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  namespace: zlinebot
spec:
  containers:
    - name: prometheus
      image: prom/prometheus
      ports:
        - containerPort: 9090
