apps/zLinebot/k8s/spire.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spire-server
  namespace: zlinebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spire-server
  template:
    metadata:
      labels:
        app: spire-server
    spec:
      containers:
        - name: spire
          image: ghcr.io/spiffe/spire-server
