apps/zLinebot/k8s/core.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zlinebot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: zlinebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zlinebot
  template:
    metadata:
      labels:
        app: zlinebot
    spec:
      containers:
        - name: app
          image: zlinebot:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "2"
              memory: "4Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: zlinebot
spec:
  selector:
    app: zlinebot
  ports:
    - port: 80
      targetPort: 3000
