apps/zLinebot/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: zlinebot
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: api-canary
  namespace: zlinebot
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
