apps/zLinebot/k8s/istio-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: cross-cluster
  namespace: zlinebot
spec:
  hosts:
    - app.global
  location: MESH_INTERNAL
  resolution: DNS
  ports:
    - number: 80
      name: http
      protocol: HTTP
